# marginalization

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/factor/: binary_pose_error_factor.cpp  binary_pose_error_factor.hpp  marginalization_factor.cpp  marginalization_factor.h  pinhole_project_factor.cpp  pinhole_project_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  project_error.cpp  project_error.h
src/utility/: NumbDifferentiator.hpp  num-diff.hpp  utility.cpp  utility.h
test/: testMarginalization.cpp  testPinholeProjectFactor.cpp  testProjectError.cpp
